<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/label_item_date"/>

    <CheckBox
        android:id="@+id/checkT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_check"
        android:enabled="false"/>

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_item_check"
        android:enabled="false"/>
</LinearLayout>