<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/label_detail_title"/>

    <TextView
        android:id="@+id/txtLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/label_detail_last"/>

    <TextView
        android:id="@+id/txtContravetion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/label_detail_count"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>